# complaint_project7

./: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
complaint_project7/: asgi.py  db.sqlite3  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
complaint_project7/complaint_project7/: asgi.py  settings.py  urls.py  wsgi.py
complaint_project7/portal/: models.py  urls.py  views.py
complaint_project7/portal/migrations/: 0001_initial.py
complaint_project7/templates/: base.html  complaint_form.html  dashboard.html  home.html  officer_dashboard.html  officer_login.html  status.html  success.html  track.html
portal/: models.py  urls.py  views.py
portal/migrations/: 0001_initial.py
templates/: base.html  complaint_form.html  dashboard.html  home.html  officer_dashboard.html  officer_login.html  status.html  success.html  track.html
