[tool.poetry]
name = "complaint_project7"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "6.0.1"
gunicorn = "25.3.0"
psycopg2-binary = "2.9.10"
dj-database-url = "2.3.0"
asgiref = "3.11.0"
sqlparse = "0.5.5"
tzdata = "2025.3"
typing_extensions = "4.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"